--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     }
   },
   "scripts": {
-    "build": "tsc -p tsconfig.build.json",
+    "build": "node node_modules/typescript/bin/tsc -p tsconfig.build.json",
     "prepublishOnly": "npm run build",
     "test": "vitest run"
   },
